Add loader with sleep function to delay api call

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
     </div>
     <div class="rightColumn"></div>
+    <div id="loading"></div>
   </div>
   <footer></footer>
 </div>
